feat : replace emacs with vscode as git editor

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -13,13 +13,10 @@
 
 [core]
     # editor = emacsclient -n -c -a \"\"
-    editor = emacsclient -n -c -a \"\"
+	editor = code --wait
     excludesfile = /Users/ray/.gitignore
     autocrlf = input
     pager = less -MR
-
-# [interactive]
-      # diffFilter = delta --color-only
 
 [http]
     postBuffer = 524288000
@@ -53,10 +50,19 @@
     date = short
 
 [diff]
-    tool = ediff
-
+    tool = vscode
 [difftool]
     prompt = false
+[difftool "vscode"]
+    cmd = code --wait --diff $LOCAL $REMOTE
+
+[merge]
+    tool = vscode
+[mergetool]
+    keepBackup = false
+    prompt = false
+[mergetool "vscode"]
+    cmd = code --wait $MERGED
 
 # [difftool "ediff"]
 #     # cmd = nvim -d \"$LOCAL\" \"$REMOTE\"
@@ -68,22 +74,22 @@
 # [difftool "ediffclient"]
 #     cmd = emacsclient -n -e \"(ediff-files \\\"$LOCAL\\\" \\\"$REMOTE\\\")\"
 
-[difftool "ediff"]
-    cmd = edf "$LOCAL" "$REMOTE"
+# [difftool "ediff"]
+#     cmd = edf "$LOCAL" "$REMOTE"
 
-[merge]
-    tool = ediff
-    conflictStyle = diff3
+# [merge]
+#     tool = ediff
+#     conflictStyle = diff3
 
-[mergetool]
-    keepBackup = false
-    prompt = false
+# [mergetool]
+#     keepBackup = false
+#     prompt = false
 
 # [mergetool "ediff"]
 #     cmd = emacsclient -n -c -a \"\"  --eval \"(ediff-merge-files-with-ancestor \\\"$LOCAL\\\" \\\"$REMOTE\\\" \\\"$BASE\\\" nil \\\"$MERGED\\\")\"
 
-[mergetool "ediff"]
-    cmd = edf "$LOCAL" "$REMOTE" "$MERGED" "$BASE"
+# [mergetool "ediff"]
+#     cmd = edf "$LOCAL" "$REMOTE" "$MERGED" "$BASE"
 
 [rerere]
     enabled = true
