--- a/ssh/config
+++ b/ssh/config
@@ -2,27 +2,27 @@
 # Host github.com
 #    Hostname github.com
 #    User git
-#    ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8080
+#    ProxyCommand socat - PROXY:$HTTPS:%h:%p,proxyport=8080
 
 # 默认端口，socks5代理
 Host github.com
    Hostname github.com
    User git
-   ProxyCommand nc -v -x 127.0.0.1:4781 %h %p
+   ProxyCommand nc -v -x $SOCKS %h %p
 #
 # 443端口，https代理
 # Host github.com
 #    Hostname ssh.github.com
 #    Port 443
 #    User git
-#    ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8080
+#    ProxyCommand socat - PROXY:$HTTPS:%h:%p,proxyport=8080
 
 # 443端口，socks5代理
 # Host github.com
 #    Hostname ssh.github.com
 #    Port 443
 #    User git
-#    ProxyCommand nc -v -x 127.0.0.1:1080 %h %p
+#    ProxyCommand nc -v -x $SOCKS %h %p
 
 
 # Host *
