--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -177,7 +177,7 @@ disable_ligatures always
 #: that numbers smaller than repaint_delay will be limited to
 #: repaint_delay.
 
-cursor_stop_blinking_after 0.0
+cursor_stop_blinking_after 0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
@@ -382,7 +382,7 @@ enable_audio_bell no
 
 #: Window layout {{{
 
-# remember_window_size  yes
+# remember_window_size  no
 # initial_window_width  640
 # initial_window_height 400
 
@@ -393,7 +393,8 @@ enable_audio_bell no
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+# enabled_layouts Splits
+enabled_layouts tall:bias=50;full_size=1;mirrored=false,fat:bias=50;full_size=1;mirrored=false,stack
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -408,7 +409,7 @@ enable_audio_bell no
 #: resizing windows. The cells value is used for horizontal resizing
 #: and the lines value for vertical resizing.
 
-# window_border_width 0.5pt
+window_border_width 1px
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
@@ -424,7 +425,7 @@ enable_audio_bell no
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
 
-# window_margin_width 0
+# window_margin_width  0
 
 #: The window margin (in pts) (blank area outside the border). A
 #: single value sets all four sides. Two values set the vertical and
@@ -447,7 +448,7 @@ enable_audio_bell no
 #: the vertical and horizontal sides. Three values set top, horizontal
 #: and bottom. Four values set top, right, bottom and left.
 
-# placement_strategy center
+placement_strategy top-left
 
 #: When the window size is not an exact multiple of the cell size, the
 #: cell area of the terminal window will have some extra padding on
@@ -475,7 +476,7 @@ enable_audio_bell no
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations titlebar-only
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -517,15 +518,15 @@ enable_audio_bell no
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
-# tab_bar_margin_width 0.0
+# tab_bar_margin_width 0
 
 #: The margin to the left and right of the tab bar (in pts)
 
-# tab_bar_style fade
+tab_bar_style separator
 
 #: The tab bar style, can be one of: fade, separator, powerline, or
 #: hidden. In the fade style, each tab's edges fade into the
@@ -554,7 +555,7 @@ enable_audio_bell no
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-# tab_separator " ┇"
+tab_separator "┇"
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -564,7 +565,7 @@ enable_audio_bell no
 #: Some text or a unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has some activity.
 
-# tab_title_template "{title}"
+tab_title_template "  {index}  "
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -989,7 +990,7 @@ macos_show_window_title_in window
 #: shortcuts, you can change it in your kitty.conf to change the
 #: modifiers for all the default shortcuts.
 
-# clear_all_shortcuts no
+clear_all_shortcuts yes
 
 #: You can have kitty remove all shortcut definition seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
@@ -1096,7 +1097,9 @@ macos_show_window_title_in window
 
 #: For more details, see launch.
 
-# map cmd+enter   new_window
+# map cmd+n   launch --cwd=current
+# map cmd+d   close_window
+# map cmd+;   next_window
 # map kitty_mod+n new_os_window
 
 #: Works like new_window above, except that it opens a top level OS
@@ -1156,8 +1159,8 @@ macos_show_window_title_in window
 #: the first tab, 2 the second tab and -1 being the previously active
 #: tab, and any number larger than the last tab being the last tab::
 
-#:     map ctrl+alt+1 goto_tab 1
-#:     map ctrl+alt+2 goto_tab 2
+# map cmd+1 goto_tab 1
+# map cmd+2 goto_tab 2
 
 #: Just as with new_window above, you can also pass the name of
 #: arbitrary commands to run when using new_tab and use
@@ -1320,5 +1323,41 @@ macos_show_window_title_in window
 
 # }}}
 
+# General
+kitty_mod  ctrl+shift
+map  cmd+c   copy_to_clipboard
+map  cmd+v   paste_from_clipboard
+
+# Tab
+map  cmd+t  new_tab_with_cwd !neighbor
+map  cmd+w  close_tab
+map  cmd+'  next_tab
+map  cmd+1  goto_tab 1
+map  cmd+2  goto_tab 2
+map  cmd+3  goto_tab 3
+map  cmd+4  goto_tab 4
+map  cmd+5  goto_tab 5
+map  cmd+6  goto_tab 6
+map  cmd+7  goto_tab 7
+map  cmd+8  goto_tab 8
+map  cmd+9  goto_tab 9
+
+# Window
+map  cmd+n  launch --cwd=current
+map  cmd+d  close_window
+map  cmd+;  next_window
+
+map  kitty_mod+f  move_window_forward
+map  kitty_mod+b  move_window_backward
+
+# Layout
+map  cmd+enter  next_layout
+
+# Scroll
+map  kitty_mod+k  scroll_page_up
+map  kitty_mod+j  scroll_page_down
+map  kitty_mod+a  scroll_home
+map  kitty_mod+e  scroll_end
+
 # theme
-include ./onedark.conf
+include ./one_dark.conf
