--- a/config/kitty/one_dark.conf
+++ b/config/kitty/one_dark.conf
@@ -4,7 +4,6 @@
 
 foreground #979eab
 background #282c34
-cursor #cccccc
 
 color0 #282c34
 color1 #e06c75
@@ -23,12 +22,20 @@ color13 #be5046
 color14 #56b6c2
 color15 #abb2bf
 
+cursor #cccccc
+cursor_text_color #282c34
+
 selection_foreground #282c34
 selection_background #979eab
 
 # Tab Bar
-
 active_tab_foreground   #282c34
 active_tab_background   #979eab
 inactive_tab_foreground #abb2bf
 inactive_tab_background #282c34
+
+# active_border_color #00ff00
+# inactive_border_color #979eab
+
+active_border_color #19cb00
+inactive_border_color #979eab
