fix : fix kitten color

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -10,8 +10,8 @@ font_size 16.0
 cursor_stop_blinking_after 0
 
 # mouse
-url_color #19cb00
-url_style single
+url_color #56b6c2
+url_style double
 
 # bell
 enable_audio_bell no
@@ -71,7 +71,7 @@ active_tab_background   #979eab
 inactive_tab_foreground #abb2bf
 inactive_tab_background #282c34
 
-active_border_color #19cb00
+active_border_color #61afef
 inactive_border_color #979eab
 
 # tweak
@@ -113,7 +113,7 @@ map  kitty_mod+j  scroll_page_down
 map  kitty_mod+a  scroll_home
 map  kitty_mod+e  scroll_end
 # kitten
-kitten_alias hints hints --hints-offset=0 --alphabet=asdfjklqweruiop
+kitten_alias hints hints --hints-offset=0 --alphabet=asdfjklqweruiop --hints-background-color=blue
 # map  cmd+l>u  kitten hints --type url
 # map  cmd+l>y  kitten hints --type hyperlink
 map  cmd+l>o  kitten hints --type path
