--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -77,7 +77,7 @@ inactive_border_color #979eab
 # tweak
 macos_titlebar_color background
 macos_option_as_alt yes
-macos_traditional_fullscreen yes
+# macos_traditional_fullscreen yes
 macos_show_window_title_in window
 
 # shortcut
