--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,12 +12,12 @@
     # editor = code --wait
   editor = nvim
   autocrlf = input
-    # pager = less -x1,5
-  pager = diff-so-fancy | less -x1,5 -RFX
+    # pager = less --tabs=4
+  pager = diff-so-fancy | less --tabs=4 -RFX
   excludesfile = /Users/ray/.gitignore
 
 [interactive]
-	difffilter = diff-so-fancy
+	difffilter = (echo && diff-so-fancy)
 
 [diff-so-fancy]
   useUnicodeRuler = false
@@ -33,16 +33,16 @@
 # See https://git-scm.com/docs/git-config#Documentation/git-config.txt-color
 [color "diff"]
   meta = yellow bold
-  commit = green bold
   frag = blue bold
-  old = red bold
-  new = green bold
+  commit = green bold
+  old = red
+  new = green
   whitespace = red reverse
 
 [color "diff-highlight"]
-  oldNormal = red bold
+  oldNormal = red
   oldHighlight = black bold red
-  newNormal = green bold
+  newNormal = green
   newHighlight = black bold green
 
 [credential]
@@ -84,7 +84,7 @@
   tool = vscode
 [difftool]
   prompt = false
-[difftool "kkkvs"]
+[difftool "vscode"]
   cmd = code --wait --diff $LOCAL $REMOTE
 
 [merge]
@@ -102,3 +102,6 @@
   smudge = git-lfs smudge -- %f
 [pull]
   rebase = false
+[log]
+	abbrevCommit = true
+	decorate = no
