--- a/git/lazygit.yml
+++ b/git/lazygit.yml
@@ -8,12 +8,12 @@ gui:
   theme:
     lightTheme: false # For terminals with a light background
     activeBorderColor:
-      - white
+      - yellow
       - bold
     inactiveBorderColor:
-      - green
+      - white
     optionsTextColor:
-      - blue
+      - white
     selectedLineBgColor:
       - default
     selectedRangeBgColor:
@@ -26,28 +26,27 @@ gui:
 git:
   paging:
     colorArg: always
-    pager: diff-so-fancy
+    useConfig: true
   merging:
     # only applicable to unix users
     manualCommit: false
     # extra args passed to `git merge`, e.g. --no-ff
-  args: ''
+    args: ''
   pull:
     mode: 'merge' # one of 'merge' | 'rebase' | 'ff-only'
   skipHookPrefix: WIP
   autoFetch: true
-  branchLogCmd: 'git log --graph --color=always --abbrev-commit --decorate --date=relative --pretty=medium {{branchName}} --'
+  branchLogCmd: 'git log --graph {{branchName}} --'
   overrideGpg: false # prevents lazygit from spawning a separate process when using GPG
   disableForcePushing: false
 update:
   method: prompt # can be: prompt | background | never
   days: 14 # how often an update is checked for
 reporting: 'undetermined' # one of: 'on' | 'off' | 'undetermined'
-confirmOnQuit:
-  false
+confirmOnQuit: false
   # determines whether hitting 'esc' will quit the application when there is nothing to cancel/close
 quitOnTopLevelReturn: true
-disableStartupPopups: false
+disableStartupPopups: true
 keybinding:
   universal:
     quit: 'q'
