--- a/config/proxychains.conf
+++ b/config/proxychains.conf
@@ -113,5 +113,5 @@ tcp_connect_time_out 8000
 # meanwile
 # defaults set to "tor"
 #socks4 	127.0.0.1 9050
-socks5 127.0.0.1 4781
+# socks5 127.0.0.1 4781
 http 127.0.0.1 4780
