fix : update lazygit color

--- a/git/lazygit.yml
+++ b/git/lazygit.yml
@@ -17,7 +17,7 @@ gui:
     selectedLineBgColor:
       - default
     selectedRangeBgColor:
-      - blue
+      - reverse
     commitLength:
       show: true
     mouseEvents: true
