--- a/term/kitty/kitty.conf
+++ b/term/kitty/kitty.conf
@@ -28,6 +28,7 @@ tab_bar_edge top
 tab_bar_style separator
 tab_separator "┇"
 tab_title_template "  {index}  "
+tab_switch_strategy left
 
 # theme
 dynamic_background_opacity yes
