feat : add brew rewmove dependen func

--- a/bonclay.yaml
+++ b/bonclay.yaml
@@ -44,6 +44,7 @@ spec:
   ~/.gemrc: home/.gemrc
   ~/.shellcheckrc: home/.shellcheckrc
   ~/.clang-format: home/.clang-format
+  # ~/.Brewfile: home/.Brewfile
   ~/.ssh/config: home/ssh_config
 
 
