--- a/git/lazygit.yml
+++ b/git/lazygit.yml
@@ -44,7 +44,6 @@ update:
   days: 14 # how often an update is checked for
 reporting: 'undetermined' # one of: 'on' | 'off' | 'undetermined'
 confirmOnQuit: false
-  # determines whether hitting 'esc' will quit the application when there is nothing to cancel/close
 quitOnTopLevelReturn: true
 disableStartupPopups: true
 keybinding:
@@ -161,3 +160,5 @@ keybinding:
     init: 'i'
     update: 'u'
     bulkMenu: 'b'
+os:
+  openCommand: 'code -rg {{filename}}'
