refactor : update bonclay.yaml

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,3 +1,5 @@
+#### Configuration see https://sw.kovidgoyal.net/kitty/conf.html
+
 # font
 font_family      Sarasa Mono SC Regular
 bold_font        Sarasa Mono SC Bold
@@ -5,6 +7,7 @@ italic_font      Sarasa Mono SC Italic
 bold_italic_font Sarasa Mono SC Bold Italic
 
 font_size 16.0
+disable_ligatures always
 
 # cursor
 cursor_stop_blinking_after 0
