--- a/bonclay.yaml
+++ b/bonclay.yaml
@@ -12,12 +12,13 @@ sync:
 
 spec:
   # terminal
-  ~/.config/kitty: term/kitty
+  ~/.config/kitty: kitty
+
   # theme
-  ~/.config/starship.toml: term/starship.toml
+  ~/.config/starship.toml: starship.toml
+
   # zsh
   ~/.zsh: zsh
-  ~/.zshrc: zsh/.zshrc
   ~/.zshenv: zsh/.zshenv
   ~/.zprofile: zsh/.zprofile
 
@@ -25,8 +26,8 @@ spec:
   ~/.gitconfig: git/.gitconfig
   ~/.gitignore: git/.gitignore
   ~/.gitmessage: git/.gitmessage
+  ~/.config/gh/config.yml: git/gh.yml
   ~/Library/Application Support/jesseduffield/lazygit/config.yml: git/lazygit.yml
-  # ~/.config/gh/config.yml: git/gh.yml
   # ~/.config/config.yml: git/lazygit.yml
 
   # JS
@@ -35,31 +36,31 @@ spec:
   ~/.npmrcs: js/.npmrcs
   ~/.local/nvm/default-packages: js/default-packages
   # PY
-  ~/.pylintrc: py/.pylintrc
-  ~/.config/pip/pip.conf: py/pip.conf
+  ~/.pylintrc: .pylintrc
+  ~/.config/pip/pip.conf: pip.conf
 
   # home
   # ~/.curlrc: home/.curlrc
   # ~/.wgetrc: home/.wgetrc
-  ~/.gemrc: home/.gemrc
-  ~/.shellcheckrc: home/.shellcheckrc
-  ~/.clang-format: home/.clang-format
-  # ~/.Brewfile: home/.Brewfile
-  ~/.ssh/config: home/ssh_config
+  ~/.gemrc: .gemrc
+  ~/.shellcheckrc: .shellcheckrc
+  ~/.clang-format: .clang-format
+  # ~/.Brewfile: .Brewfile
+  ~/.ssh/config: ssh_config
 
 
   # self
   ~/bin: bin
 
   # config
-  ~/.config/lf/lfrc: config/lfrc
-  ~/.config/htop/htoprc: config/htoprc
-  ~/.config/proxychains.conf: config/proxychains.conf
-  ~/.config/bat.conf: config/bat.conf
-  ~/.config/cargo/config: config/cargo.toml
-  ~/.config/ranger: config/ranger
-  ~/.config/rg: config/rg
+  ~/.config/htop/htoprc: htoprc
+  ~/.config/proxychains.conf: proxychains.conf
+  ~/.config/bat.conf: bat.conf
+  ~/.config/cargo/config: cargo.toml
+  ~/.config/.ripgreprc: .ripgreprc
+  ~/.config/.rgignore: .rgignore
+  ~/.config/ranger: ranger
 
   # macos
-  ~/.config/karabiner/karabiner.json: config/karabiner/karabiner.json
-  ~/.config/karabiner/assets: config/karabiner/assets
+  ~/.config/karabiner/karabiner.json: karabiner/karabiner.json
+  ~/.config/karabiner/assets: karabiner/assets
