fix : update $path

--- a/share/ranger/rc.conf
+++ b/share/ranger/rc.conf
@@ -1,3 +1,5 @@
+### more to visit https://github.com/ranger/ranger/tree/master/ranger/config
+
 # ===================================================================
 # == Options
 # ===================================================================
