--- a/home.yaml
+++ b/home.yaml
@@ -42,7 +42,7 @@ spec:
   # config
   ~/.config/htop/htoprc: share/htoprc
   ~/.config/bat.conf: share/bat.conf
-  ~/.config/cargo/config: share/cargo.toml
+  ~/.local/cargo/config: share/cargo.toml
   ~/.config/.ripgreprc: share/.ripgreprc
   ~/.config/.rgignore: share/.rgignore
   ~/.config/ranger: share/ranger
