fix : hide lazygit border

--- a/share/lazygit.yml
+++ b/share/lazygit.yml
@@ -11,7 +11,7 @@ gui:
       - yellow
       - bold
     inactiveBorderColor:
-      - white
+      - black
     optionsTextColor:
       - white
     selectedLineBgColor:
