--- a/share/Brewfile
+++ b/share/Brewfile
@@ -38,18 +38,17 @@ brew "clang-format"
 brew "cloc"
 brew "cmake"
 brew "coreutils"
-brew "curl"
 brew "jansson"
 brew "jemalloc"
 brew "libev"
 brew "libevent"
-brew "libidn"
 brew "nghttp2"
 brew "openldap"
-brew "curl-openssl"
+brew "curl"
 brew "deno"
 brew "diff-so-fancy"
 brew "dos2unix"
+brew "openjdk"
 brew "fd"
 brew "findutils"
 brew "unixodbc"
@@ -95,12 +94,14 @@ brew "harfbuzz"
 brew "ncurses"
 brew "htop"
 brew "hub"
+brew "hugo"
 brew "ilmbase"
 brew "krb5"
 brew "libde265"
 brew "shared-mime-info"
 brew "x265"
 brew "libheif"
+brew "libidn"
 brew "libomp"
 brew "libpq"
 brew "pango"
@@ -125,7 +126,6 @@ brew "mysql"
 brew "neovim", args: ["HEAD"]
 brew "nmap"
 brew "openexr"
-brew "openjdk"
 brew "pandoc"
 brew "perl"
 brew "prettyping"
@@ -188,7 +188,8 @@ cask "v2rayu"
 cask "visual-studio-code"
 cask "webstorm"
 cask "wireshark"
-cask "wpsoffice"
 mas "Resize Master", id: 1025306797
+mas "WeChat", id: 836500024
+mas "WPS Office", id: 1443749478
 mas "Xcode", id: 497799835
 mas "网易邮箱大师", id: 1233593954
