--- a/share/kitty.conf
+++ b/share/kitty.conf
@@ -24,7 +24,7 @@ enabled_layouts tall:bias=50;full_size=1;mirrored=false,fat:bias=50;full_size=1;
 
 window_border_width 1px
 placement_strategy top-left
-hide_window_decorations titlebar-only
+# hide_window_decorations titlebar-only
 
 # tab
 tab_bar_edge top
