fix : update brd() and use neovim-nightly

--- a/share/Brewfile
+++ b/share/Brewfile
@@ -4,6 +4,7 @@ tap "homebrew/cask-fonts", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/ho
 tap "homebrew/cask-versions"
 tap "homebrew/core", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-core.git"
 tap "homebrew/services"
+tap "jason0x43/neovim-nightly"
 tap "jesseduffield/lazygit"
 tap "mongodb/brew"
 tap "sass/sass"
@@ -123,7 +124,6 @@ brew "mas"
 brew "msgpack"
 brew "protobuf"
 brew "mysql"
-brew "neovim", args: ["HEAD"]
 brew "nmap"
 brew "openexr"
 brew "pandoc"
@@ -153,6 +153,7 @@ brew "mongodb/brew/mongodb-database-tools"
 brew "mongodb/brew/mongodb-community"
 brew "talal/tap/bonclay"
 brew "universal-ctags/universal-ctags/universal-ctags", args: ["HEAD"]
+cask "airdroid"
 cask "another-redis-desktop-manager"
 cask "baidunetdisk"
 cask "cheatsheet"
@@ -172,6 +173,7 @@ cask "microsoft-edge"
 cask "mongodb-compass"
 cask "mos"
 cask "motrix"
+cask "neovim-nightly"
 cask "neteasemusic"
 cask "picgo"
 cask "postman"
