--- a/share/Brewfile
+++ b/share/Brewfile
@@ -13,7 +13,6 @@ tap "universal-ctags/universal-ctags"
 brew "adns"
 brew "gdbm"
 brew "openssl@1.1"
-brew "gettext"
 brew "readline"
 brew "sqlite"
 brew "xz"
@@ -22,6 +21,7 @@ brew "asciinema"
 brew "aspell"
 brew "automake"
 brew "autopep8"
+brew "gettext"
 brew "axel"
 brew "bat"
 brew "bench"
@@ -39,17 +39,15 @@ brew "clang-format"
 brew "cloc"
 brew "cmake"
 brew "coreutils"
-brew "jansson"
 brew "jemalloc"
 brew "libev"
-brew "libevent"
 brew "nghttp2"
 brew "openldap"
+brew "zstd"
 brew "curl"
 brew "deno"
 brew "diff-so-fancy"
 brew "dos2unix"
-brew "openjdk"
 brew "fd"
 brew "findutils"
 brew "unixodbc"
@@ -74,13 +72,16 @@ brew "gnu-sed"
 brew "gnu-tar"
 brew "gnu-time"
 brew "pkg-config"
+brew "libevent"
 brew "p11-kit"
+brew "jansson"
 brew "unbound"
 brew "gnutls"
 brew "libgpg-error"
 brew "libassuan"
 brew "libgcrypt"
 brew "libksba"
+brew "libusb"
 brew "gnupg"
 brew "go"
 brew "gobject-introspection"
@@ -126,6 +127,7 @@ brew "protobuf"
 brew "mysql"
 brew "nmap"
 brew "openexr"
+brew "openjdk"
 brew "pandoc"
 brew "perl"
 brew "prettyping"
@@ -146,7 +148,6 @@ brew "unrar"
 brew "utf8proc"
 brew "watchman"
 brew "wget"
-brew "yapf"
 brew "zsh"
 brew "jesseduffield/lazygit/lazygit"
 brew "mongodb/brew/mongodb-database-tools"
@@ -154,8 +155,8 @@ brew "mongodb/brew/mongodb-community"
 brew "talal/tap/bonclay"
 brew "universal-ctags/universal-ctags/universal-ctags", args: ["HEAD"]
 cask "airdroid"
-cask "another-redis-desktop-manager"
 cask "baidunetdisk"
+cask "charles"
 cask "cheatsheet"
 cask "electron"
 cask "firefox"
@@ -170,7 +171,6 @@ cask "keycastr"
 cask "kitty"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
-cask "mongodb-compass"
 cask "mos"
 cask "motrix"
 cask "neovim-nightly"
@@ -188,9 +188,3 @@ cask "typora"
 cask "v2rayu"
 cask "visual-studio-code"
 cask "webstorm"
-cask "wireshark"
-mas "Resize Master", id: 1025306797
-mas "WeChat", id: 836500024
-mas "WPS Office", id: 1443749478
-mas "Xcode", id: 497799835
-mas "网易邮箱大师", id: 1233593954
