fix : update brewfile

--- a/share/Brewfile
+++ b/share/Brewfile
@@ -1,3 +1,4 @@
+tap "d12frosted/emacs-plus"
 tap "homebrew/bundle"
 tap "homebrew/cask", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask.git"
 tap "homebrew/cask-fonts", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask-fonts.git"
@@ -11,8 +12,8 @@ tap "sass/sass"
 tap "talal/tap"
 tap "universal-ctags/universal-ctags"
 brew "adns"
-brew "gdbm"
 brew "openssl@1.1"
+brew "gdbm"
 brew "readline"
 brew "sqlite"
 brew "xz"
@@ -24,6 +25,7 @@ brew "autopep8"
 brew "gettext"
 brew "axel"
 brew "bat"
+brew "bdw-gc"
 brew "bench"
 brew "binutils"
 brew "black"
@@ -33,7 +35,6 @@ brew "freetype"
 brew "pcre"
 brew "glib"
 brew "pixman"
-brew "python@3.8"
 brew "cairo"
 brew "clang-format"
 brew "cloc"
@@ -66,6 +67,8 @@ brew "git-extras"
 brew "gnu-getopt"
 brew "git-flow-avh"
 brew "git-lfs"
+brew "glances"
+brew "python@3.8"
 brew "global"
 brew "gmp"
 brew "gnu-sed"
@@ -141,14 +144,16 @@ brew "ruby"
 brew "shellcheck"
 brew "shfmt"
 brew "starship"
+brew "utf8proc"
+brew "subversion"
 brew "swig"
 brew "tldr"
 brew "tree"
 brew "unrar"
-brew "utf8proc"
 brew "watchman"
 brew "wget"
 brew "zsh"
+brew "d12frosted/emacs-plus/emacs-plus@28", args: ["with-xwidgets", "without-imagemagick"]
 brew "jesseduffield/lazygit/lazygit"
 brew "mongodb/brew/mongodb-database-tools"
 brew "mongodb/brew/mongodb-community"
@@ -173,7 +178,7 @@ cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "mos"
 cask "motrix"
-cask "neovim-nightly"
+cask "jason0x43/neovim-nightly/neovim-nightly"
 cask "neteasemusic"
 cask "picgo"
 cask "postman"
@@ -188,3 +193,6 @@ cask "typora"
 cask "v2rayu"
 cask "visual-studio-code"
 cask "webstorm"
+cask "wechat"
+mas "Xcode", id: 497799835
+mas "网易邮箱大师", id: 1233593954
