feat : add multi source for gem, cargo, pip

--- a/share/pip.conf
+++ b/share/pip.conf
@@ -1,3 +1,13 @@
 [global]
-index-url = https://pypi.tuna.tsinghua.edu.cn/simple
 target = /Users/ray/.local/python
+
+# aliyun
+# index-url = https://mirrors.aliyun.com/pypi/simple/
+
+# tsinghua
+index-url = https://pypi.tuna.tsinghua.edu.cn/simple
+
+# douban
+# index-url = http://pypi.douban.com/simple
+# trusted-host = pypi.douban.com
+
