--- a/share/.gemrc
+++ b/share/.gemrc
@@ -2,6 +2,8 @@
 :backtrace: false
 :bulk_threshold: 1000
 :sources:
-- https://gems.ruby-china.com/
+# - https://gems.ruby-china.com/
+- https://mirrors.aliyun.com/rubygems/
 :update_sources: true
 :verbose: true
+:concurrent_downloads: 8
