--- a/share/cargo.toml
+++ b/share/cargo.toml
@@ -1,6 +1,12 @@
 [source.crates-io]
-registry = "https://github.com/rust-lang/crates.io-index"
 replace-with = 'tuna'
+registry = "https://github.com/rust-lang/crates.io-index"
 
 [source.tuna]
 registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
+
+[source.ustc]
+registry = "https://mirrors.ustc.edu.cn/crates.io-index"
+
+[source.rustcc]
+registry = "git://crates.rustcc.cn/crates.io-index"
