fix : update version of node and brewfile

--- a/share/Brewfile
+++ b/share/Brewfile
@@ -32,6 +32,7 @@ brew "black"
 brew "brotli"
 brew "c-ares"
 brew "freetype"
+brew "libffi"
 brew "pcre"
 brew "glib"
 brew "pixman"
@@ -75,7 +76,9 @@ brew "gnu-sed"
 brew "gnu-tar"
 brew "gnu-time"
 brew "pkg-config"
+brew "guile"
 brew "libevent"
+brew "nettle"
 brew "p11-kit"
 brew "jansson"
 brew "unbound"
@@ -101,6 +104,7 @@ brew "htop"
 brew "hub"
 brew "hugo"
 brew "ilmbase"
+brew "isl"
 brew "krb5"
 brew "libde265"
 brew "shared-mime-info"
@@ -131,6 +135,7 @@ brew "mysql"
 brew "nmap"
 brew "openexr"
 brew "openjdk"
+brew "p7zip"
 brew "pandoc"
 brew "perl"
 brew "prettyping"
@@ -178,7 +183,7 @@ cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "mos"
 cask "motrix"
-cask "jason0x43/neovim-nightly/neovim-nightly"
+cask "neovim-nightly"
 cask "neteasemusic"
 cask "picgo"
 cask "postman"
