fix : update brd() and bio()

--- a/share/Brewfile
+++ b/share/Brewfile
@@ -12,6 +12,7 @@ tap "sass/sass"
 tap "talal/tap"
 tap "universal-ctags/universal-ctags"
 brew "adns"
+brew "apr"
 brew "openssl@1.1"
 brew "gdbm"
 brew "readline"
