chore(brew) : update

--- a/share/Brewfile
+++ b/share/Brewfile
@@ -15,6 +15,7 @@ brew "adns"
 brew "apr"
 brew "openssl@1.1"
 brew "gdbm"
+brew "gettext"
 brew "readline"
 brew "sqlite"
 brew "xz"
@@ -23,7 +24,6 @@ brew "asciinema"
 brew "aspell"
 brew "automake"
 brew "autopep8"
-brew "gettext"
 brew "axel"
 brew "bat"
 brew "bdw-gc"
@@ -42,6 +42,7 @@ brew "clang-format"
 brew "cloc"
 brew "cmake"
 brew "coreutils"
+brew "ctags", link: false
 brew "jemalloc"
 brew "libev"
 brew "nghttp2"
@@ -51,12 +52,16 @@ brew "curl"
 brew "deno"
 brew "diff-so-fancy"
 brew "dos2unix"
+brew "expat"
 brew "fd"
 brew "findutils"
 brew "unixodbc"
 brew "freetds"
 brew "fribidi"
 brew "fzf"
+brew "gmp"
+brew "isl"
+brew "gcc"
 brew "libtiff"
 brew "webp"
 brew "gd"
@@ -72,7 +77,6 @@ brew "git-lfs"
 brew "glances"
 brew "python@3.8"
 brew "global"
-brew "gmp"
 brew "gnu-sed"
 brew "gnu-tar"
 brew "gnu-time"
@@ -89,6 +93,7 @@ brew "libassuan"
 brew "libgcrypt"
 brew "libksba"
 brew "libusb"
+brew "pinentry"
 brew "gnupg"
 brew "go"
 brew "gobject-introspection"
@@ -105,12 +110,13 @@ brew "htop"
 brew "hub"
 brew "hugo"
 brew "ilmbase"
-brew "isl"
 brew "krb5"
 brew "libde265"
+brew "libgccjit"
 brew "shared-mime-info"
 brew "x265"
 brew "libheif"
+brew "libiconv"
 brew "libidn"
 brew "libomp"
 brew "libpq"
@@ -120,6 +126,7 @@ brew "libspiro"
 brew "libuninameslist"
 brew "libuv"
 brew "libvterm"
+brew "libxml2"
 brew "libyaml"
 brew "libzip"
 brew "little-cms2"
@@ -129,6 +136,8 @@ brew "lua"
 brew "luajit"
 brew "luarocks"
 brew "macos-trash"
+brew "mailutils"
+brew "make"
 brew "mas"
 brew "msgpack"
 brew "protobuf"
@@ -149,6 +158,7 @@ brew "ripgrep"
 brew "ruby"
 brew "shellcheck"
 brew "shfmt"
+brew "showkey"
 brew "starship"
 brew "utf8proc"
 brew "subversion"
@@ -158,6 +168,7 @@ brew "tree"
 brew "unrar"
 brew "watchman"
 brew "wget"
+brew "zlib"
 brew "zsh"
 brew "d12frosted/emacs-plus/emacs-plus@28", args: ["with-xwidgets", "without-imagemagick"]
 brew "jesseduffield/lazygit/lazygit"
@@ -177,6 +188,7 @@ cask "gitter"
 cask "google-chrome"
 cask "hiddenbar"
 cask "iina"
+cask "kap"
 cask "karabiner-elements"
 cask "keycastr"
 cask "kitty"
