--- a/share/kitty.conf
+++ b/share/kitty.conf
@@ -33,50 +33,7 @@ tab_separator "┇"
 tab_title_template "  {index}  "
 tab_switch_strategy left
 
-# theme
 dynamic_background_opacity yes
-
-foreground #979eab
-background #282c34
-
-# black
-color0 #282c34
-color8 #393e48
-# red
-color1 #e06c75
-color9 #d19a66
-# green
-color2 #98c379
-color10 #56b6c2
-# yellow
-color3 #e5c07b
-color11 #e5c07b
-# blue
-color4 #61afef
-color12 #61afef
-# magenta
-color5 #be5046
-color13 #be5046
-# cyan
-color6 #56b6c2
-color14 #56b6c2
-# white
-color7 #979eab
-color15 #abb2bf
-
-cursor #cccccc
-cursor_text_color #282c34
-
-selection_foreground #282c34
-selection_background #979eab
-
-active_tab_foreground   #282c34
-active_tab_background   #979eab
-inactive_tab_foreground #abb2bf
-inactive_tab_background #282c34
-
-active_border_color #61afef
-inactive_border_color #979eab
 
 # tweak
 macos_titlebar_color background
@@ -126,3 +83,87 @@ map  cmd+l>p  kitten hints --type path --program @
 map  cmd+l>w  kitten hints --type word --program @
 map  cmd+l>h  kitten hints --type hash --program @
 map  cmd+l>l  kitten hints --type line --program @
+
+### theme: vibrant
+# black
+color0 #242730
+color8 #393e48
+# red
+color1 #ff665c
+color9 #d19a66
+# green
+color2 #7bc275
+color10 #56b6c2
+# yellow
+color3 #fcce7b
+color11 #e5c07b
+# blue
+color4 #51afef
+color12 #51afef
+# magenta
+color5 #c57bdb
+color13 #c57bdb
+# cyan
+color6 #5cefff
+color14 #5cefff
+# white
+color7 #bbc2cf
+color15 #abb2bf
+
+foreground #bbc2cf
+background #242730
+cursor #cccccc
+cursor_text_color #242730
+
+selection_foreground #242730
+selection_background #bbc2cf
+
+active_tab_foreground   #242730
+active_tab_background   #bbc2cf
+inactive_tab_foreground #bbc2cf
+inactive_tab_background #242730
+
+active_border_color #51afef
+inactive_border_color #393e48
+
+### theme: atom-one
+## black
+# color0 #282c34
+# color8 #393e48
+## red
+# color1 #e06c75
+# color9 #d19a66
+# green
+# color2 #98c379
+# color10 #56b6c2
+# yellow
+# color3 #e5c07b
+# color11 #e5c07b
+# blue
+# color4 #61afef
+# color12 #61afef
+# magenta
+# color5 #be5046
+# color13 #be5046
+# cyan
+# color6 #56b6c2
+# color14 #56b6c2
+# white
+# color7 #979eab
+# color15 #abb2bf
+#
+# foreground #979eab
+# background #282c34
+# cursor #cccccc
+# cursor_text_color #282c34
+#
+# selection_foreground #282c34
+# selection_background #979eab
+#
+# active_tab_foreground   #282c34
+# active_tab_background   #979eab
+# inactive_tab_foreground #abb2bf
+# inactive_tab_background #282c34
+#
+# active_border_color #61afef
+# inactive_border_color #979eab
