fix : change color1 in kitty

--- a/share/kitty.conf
+++ b/share/kitty.conf
@@ -89,7 +89,7 @@ map  cmd+l>l  kitten hints --type line --program @
 color0 #242730
 color8 #393e48
 # red
-color1 #ff665c
+color1 #f76582
 color9 #d19a66
 # green
 color2 #7bc275
