adjust kitty border color

--- a/share/kitty.conf
+++ b/share/kitty.conf
@@ -123,8 +123,8 @@ active_tab_background   #bbc2cf
 inactive_tab_foreground #bbc2cf
 inactive_tab_background #242730
 
-active_border_color #51afef
-inactive_border_color #393e48
+active_border_color #bbc2cf
+inactive_border_color #62686e
 
 ### theme: atom-one
 ## black
