update : brewfile and htoprc

--- a/share/Brewfile
+++ b/share/Brewfile
@@ -12,6 +12,7 @@ tap "sass/sass"
 tap "talal/tap"
 tap "universal-ctags/universal-ctags"
 brew "adns"
+brew "aom"
 brew "apr"
 brew "openssl@1.1"
 brew "gdbm"
@@ -83,9 +84,9 @@ brew "gnu-time"
 brew "pkg-config"
 brew "guile"
 brew "libevent"
+brew "libtasn1"
 brew "nettle"
 brew "p11-kit"
-brew "jansson"
 brew "unbound"
 brew "gnutls"
 brew "libgpg-error"
@@ -110,15 +111,19 @@ brew "htop"
 brew "hub"
 brew "hugo"
 brew "ilmbase"
-brew "krb5"
 brew "libde265"
-brew "libgccjit"
 brew "shared-mime-info"
 brew "x265"
 brew "libheif"
+brew "libomp"
+brew "little-cms2"
+brew "openexr"
+brew "imagemagick"
+brew "jansson"
+brew "krb5"
+brew "libgccjit"
 brew "libiconv"
 brew "libidn"
-brew "libomp"
 brew "libpq"
 brew "pango"
 brew "librsvg"
@@ -129,7 +134,6 @@ brew "libvterm"
 brew "libxml2"
 brew "libyaml"
 brew "libzip"
-brew "little-cms2"
 brew "loc"
 brew "lrzsz"
 brew "lua"
@@ -143,7 +147,6 @@ brew "msgpack"
 brew "protobuf"
 brew "mysql"
 brew "nmap"
-brew "openexr"
 brew "openjdk"
 brew "p7zip"
 brew "pandoc"
@@ -170,7 +173,7 @@ brew "watchman"
 brew "wget"
 brew "zlib"
 brew "zsh"
-brew "d12frosted/emacs-plus/emacs-plus@28", args: ["with-xwidgets", "without-imagemagick"]
+brew "d12frosted/emacs-plus/emacs-plus@28", args: ["with-modern-purple-flat-icon", "with-xwidgets"]
 brew "jesseduffield/lazygit/lazygit"
 brew "mongodb/brew/mongodb-database-tools"
 brew "mongodb/brew/mongodb-community"
