--- a/share/lazygit.yml
+++ b/share/lazygit.yml
@@ -1,5 +1,6 @@
 gui:
   # stuff relating to the UI
+  showFileTree: true
   scrollHeight: 2 # how many lines you scroll by
   scrollPastBottom: true # enable scrolling past the bottom
   sidePanelWidth: 0.3333 # number from 0 to 1
